[package]
name = "ratatui-async-template"
version = "0.1.0"
edition = "2021"
authors = ["Dheepak Krishnamurthy"]
build = "build.rs"
repository = "https://github.com/ratatui-org/ratatui-async-template" # used by env!("CARGO_PKG_REPOSITORY")

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratatui = {version = "0.23.0"}
crossterm = { version = "0.27.0", default-features = false, features = ["event-stream", "serde"] }
tokio = { version = "1.28.2", features = ["full"] }
tokio-stream = "0.1.14"
unicode-segmentation = "1.10.1"
better-panic = "0.3.0"
clap = { version = "4.3.4", default-features = false, features = [
  "std",
  "color",
  "help",
  "usage",
  "error-context",
  "suggestions",
  "derive",
  "cargo",
  "wrap_help",
  "unicode",
  "string",
  "unstable-styles",
] }
clap_complete = "4.3.1"
futures = "0.3.28"
tracing-macros = "0.0.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
env_logger = "0.10.0"
directories = "5.0.1"
colored = "2.0.0"
log = "0.4.19"
libc = "0.2.146"
tui-input = "0.8.0"
signal-hook = "0.3.15"
tokio-util = "0.7.8"
serde = { version = "1.0.183", features = ["derive"] }
serde_derive = "1.0.183"
config = "0.13.3"
lazy_static = "1.4.0"
tracing-error = "0.2.0"
color-eyre = "0.6.2"
strip-ansi-escapes = "0.2.0"
human-panic = "1.2.0"

[profile.release]
codegen-units = 1
lto = true
strip = true

[[bin]]
name = "ratatui-async-template"
path = "src/main.rs"
